--- a/didius/Cargo.toml
+++ b/didius/Cargo.toml
@@ -1,15 +1,15 @@
 [package]
-name = "didius_oms"
+name = "didius"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [lib]
-name = "didius_oms"
-crate-type = ["cdylib", "rlib"]
+name = "didius"
+crate-type = ["cdylib"]
 
 [dependencies]
-pyo3 = { version = "0.23" }
+pyo3 = { version = "0.23", features = ["extension-module"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 chrono = { version = "0.4", features = ["serde"] }
