--- a/didius/Cargo.toml
+++ b/didius/Cargo.toml
@@ -19,7 +19,7 @@ anyhow = "1.0"
 thiserror = "1.0"
 log = "0.4"
 env_logger = "0.10"
-rust_decimal = { version = "1.40.0", features = ["macros"] }
+rust_decimal = { version = "1.40.0", features = ["macros", "serde"] }
 reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
 serde_yaml = "0.9"
 tungstenite = { version = "0.20", features = ["rustls-tls-native-roots"] }
