--- a/didius/Cargo.toml
+++ b/didius/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
 name = "didius"
-version = "0.1.0"
+version = "0.1.3"
 edition = "2021"
 build = "build.rs"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [lib]
 name = "didius"
-crate-type = ["cdylib", "rlib"]
+crate-type = ["cdylib"]
 
 [dependencies]
 pyo3 = { version = "0.23", features = ["extension-module"] }
@@ -39,7 +39,6 @@ zstd = "0.13"
 
 [features]
 default = []
-extension-module = ["pyo3/extension-module"]
 
 [dev-dependencies]
 rand = "0.9.2"
